feat: docker compose with all services and databases

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,9 @@ services:
     image: aco99/ssluzba
     environment:
       DB_HOST: 'ftndb'
+      DB_PASSWORD: admin
       FACULTY_NAME: 'FTN'
+      UNS_API: http://unssluzba:3000/users/
     ports:
       - "8081:8081"
     depends_on:
@@ -38,6 +40,7 @@ services:
     environment:
       DB_HOST: pmfdb
       FACULTY_NAME: 'PMF'
+      UNS_API: http://unssluzba:3000/users/
     ports:
       - "8082:8081"
     depends_on:
@@ -51,6 +54,7 @@ services:
     environment:
       DB_HOST: pravnidb
       FACULTY_NAME: 'PRAVNI'
+      UNS_API: http://unssluzba:3000/users/
     ports:
       - "8083:8081"
     depends_on:
@@ -59,6 +63,11 @@ services:
   
   unsdb:
     <<: *pgdb
+    volumes:
+      - D:\Fakultet\MASTER\CC\cc-django-docker\init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      POSTGRES_DB: ssluzba
+      POSTGRES_HOST_AUTH_METHOD: trust
   unssluzba:
     image: aco99/nodejs_uns
     restart: always
@@ -68,6 +77,6 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      unssluzba:
+      unsdb:
           condition: service_healthy
 
