--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,8 +16,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker images
       run: | 
-        docker build django_project/ --file Dockerfile --tag aco99/ssluzba
-        docker build nodejs_app/ --file Dockerfile --tag aco99/nodejs_uns
+        docker build --tag aco99/ssluzba ./django_project/
+        docker build --tag aco99/nodejs_uns ./nodejs_app/
     - name: Login and push the Docker images
       run: | 
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
